objects/Facility__c.object
<CustomObject>
    <description>Production Facility</description>
    <fields>
        <fullName>Accord_Lead__c</fullName>
        <description>Accord Lead</description>
        <inlineHelpText>Accord Lead</inlineHelpText>
        <label>Accord Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>Address Line 1</description>
        <inlineHelpText>Address Line 1</inlineHelpText>
        <label>Address Line 1</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>Address Line 2</description>
        <inlineHelpText>Address Line 2</inlineHelpText>
        <label>Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Subcontracting__c</fullName>
        <description>Authorized Contracting</description>
        <inlineHelpText>Authorized Contracting</inlineHelpText>
        <label>Authorized Subcontracting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bribery__c</fullName>
        <description>Bribery</description>
        <inlineHelpText>Bribery</inlineHelpText>
        <label>Bribery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Contact Email</description>
        <inlineHelpText>Contact Email</inlineHelpText>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact</description>
        <inlineHelpText>Contact</inlineHelpText>
        <label>Contact</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <formula>Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CountryName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Reference__c</fullName>
        <description>Document Reference</description>
        <inlineHelpText>Document Reference</inlineHelpText>
        <label>Document Reference</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Electrical_Safety_Audit__c</fullName>
        <description>Electrical Safety Audit</description>
        <inlineHelpText>Electrical Safety Aud</inlineHelpText>
        <label>Electrical Safety Audit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Engineering_Audit_Requested__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engineering_Audit_Not_Completed__c</fullName>
        <description>Engineering Audit not completed</description>
        <formula>AND(

ISPICKVAL( Engineering_Audit_Requested__c  , &quot;YES&quot;) ,


OR(ISBLANK(TEXT( Electrical_Safety_Audit__c )),
ISBLANK(TEXT(  Structural_Audit__c  )),
ISBLANK(TEXT(   Other_Audits__c   )),
ISBLANK(TEXT(  Fire_Safety_Audit__c  ))),


 OR(ISPICKVAL( Facility_Status__c ,&quot;Active&quot;) ,
ISPICKVAL( Facility_Status__c ,&quot;Manual Accept Shipments&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Factory Status = ACTIVE  and
Engineering Audit Requested = Yes and
Structural or Fire Safety or Electrical = Blank</inlineHelpText>
        <label>Engineering Audit Not Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineering_Audit_Not_Requested__c</fullName>
        <description>Engineering Audit not requested</description>
        <formula>AND(
OR(ISBLANK(TEXT( Engineering_Audit_Requested__c )),
ISPICKVAL( Engineering_Audit_Requested__c  , &quot;No&quot;)) ,
 OR(ISPICKVAL( Facility_Status__c ,&quot;Active&quot;) ,
ISPICKVAL( Facility_Status__c ,&quot;Manual Accept Shipments&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Factory Status = ACTIVE or MANUAL ACCEPT SHIPMENTS and
Engineering Audit Requested = NO or BLANK</inlineHelpText>
        <label>Engineering Audit Not Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineering_Audit_Requested__c</fullName>
        <description>Engineering Audit Requested</description>
        <inlineHelpText>Engineering Audit Requested</inlineHelpText>
        <label>Engineering Audit Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engineering_audit_completed__c</fullName>
        <formula>AND(ISPICKVAL(Engineering_Audit_Requested__c  , &quot;Yes&quot;),

AND(NOT(ISBLANK(TEXT( Electrical_Safety_Audit__c ))),
NOT(ISBLANK(TEXT(  Structural_Audit__c  ))),
NOT(ISBLANK(TEXT(   Other_Audits__c   ))),
NOT(ISBLANK(TEXT(   Fire_Safety_Audit__c   )))),

ISPICKVAL(  Facility_Status__c  ,&quot;Active&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering audit completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Audit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FS Audit Required</description>
        <inlineHelpText>FS Audit Required</inlineHelpText>
        <label>FS Audit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_CAPA_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FS CAPA Completed</description>
        <inlineHelpText>Audit Group  = FS FOLLOW UP and
Factory Status  = ACTIVE  and
Audit Date = NOT BLANK and
FS Audit Required = NOT BLANK</inlineHelpText>
        <label>FS CAPA Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_CAPA_Green_list_criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FS CAPA Green list criteria</description>
        <inlineHelpText>FS CAPA Green list criteria</inlineHelpText>
        <label>FS CAPA Green list criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_CAPA_Not_Requested__c</fullName>
        <formula>AND(   Pending_CAPA_FS__c   = FALSE ,
   Past_CAPA_Deadline_FS__c    = FALSE,
              FS_CAPA_Completed__c    = FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FS CAPA Not Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FS Compliant</description>
        <inlineHelpText>Audit Group = PERIODIC FS and
Factory Status = ACTIVE and
FS Audit Required = NOT BLANK and
Audit Date  &gt;= TODAY()-365*3</inlineHelpText>
        <label>FS Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Due_for_new_listing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FS Due for new listing</description>
        <inlineHelpText>Audit Group = PERIODIC FS and
Factory Status = ACTIVE and
Audit Date = BLANK and
FS Audit Required = NOT BLANK</inlineHelpText>
        <label>FS Due for new listing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Green_list_criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FS Green list criteria</description>
        <inlineHelpText>FS Green list criteria</inlineHelpText>
        <label>FS Green list criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Required_country__c</fullName>
        <description>FS Required country</description>
        <inlineHelpText>FS Required country</inlineHelpText>
        <label>FS Required Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Training_cost__c</fullName>
        <description>FS Training cost</description>
        <inlineHelpText>FS Training cost</inlineHelpText>
        <label>FS Training cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_Training_date__c</fullName>
        <description>FS Training date</description>
        <inlineHelpText>FS Training date</inlineHelpText>
        <label>FS Training date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FS_Training_request__c</fullName>
        <description>FS Training request</description>
        <inlineHelpText>FS Training request</inlineHelpText>
        <label>FS Training request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Traning_invoice__c</fullName>
        <description>FS Training invoice</description>
        <inlineHelpText>FS Training invoice</inlineHelpText>
        <label>FS Training invoice</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Name_2__c</fullName>
        <description>Facility Name 2</description>
        <inlineHelpText>Facility Name 2</inlineHelpText>
        <label>Facility Name 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Number__c</fullName>
        <description>Facility Number</description>
        <displayFormat>{0000000}</displayFormat>
        <inlineHelpText>Facility Number</inlineHelpText>
        <label>Facility Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Facility_Status__c</fullName>
        <description>Facility Status</description>
        <inlineHelpText>Facility Status</inlineHelpText>
        <label>Facility Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Delisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax</description>
        <inlineHelpText>Fax</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Findings__c</fullName>
        <formula>IF( No_of_Audits_with_Findings__c  &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked when # of audits with findings &gt; 0</inlineHelpText>
        <label>Findings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fire_Safety_Audit__c</fullName>
        <description>Fire Safety Audit</description>
        <inlineHelpText>Fire Safety Audit</inlineHelpText>
        <label>Fire Safety Audit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Engineering_Audit_Requested__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <description>GeoLocation</description>
        <inlineHelpText>GeoLocation</inlineHelpText>
        <label>GeoLocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Google_Maps__c</fullName>
        <formula>HYPERLINK(&quot;https://maps.google.com/maps?q=&quot; &amp; Address_Line_1__c &amp; &apos;,+&apos; &amp; City__c &amp; &apos;,+&apos; &amp; RegionName__c &amp; &apos;,+&apos; &amp; CountryName__c,&quot;Click to Plot on Maps&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Maps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Green_List_Status__c</fullName>
        <description>Green List Status</description>
        <inlineHelpText>Green List Status</inlineHelpText>
        <label>Green List Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Annual_WCA_Date__c</fullName>
        <description>Latest Annual WCA Date</description>
        <inlineHelpText>Latest Annual WCA Date</inlineHelpText>
        <label>Latest Annual WCA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_FS_CAPA_Date__c</fullName>
        <description>Latest FS CAPA Date</description>
        <inlineHelpText>Latest FS CAPA Date</inlineHelpText>
        <label>Latest FS CAPA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_FS_CAPA_Due_Date__c</fullName>
        <description>Latest FS CAPA Due Date</description>
        <inlineHelpText>Latest FS CAPA Due Date</inlineHelpText>
        <label>Latest FS CAPA Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_On_Site_Investigation_Date__c</fullName>
        <description>Latest On Site Investigation Date</description>
        <inlineHelpText>Latest On Site Investigation Date</inlineHelpText>
        <label>Latest On Site Investigation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Periodic_FS_Date__c</fullName>
        <description>Latest Periodic FS Date</description>
        <inlineHelpText>Latest Periodic FS Date</inlineHelpText>
        <label>Latest Periodic FS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_WCA_CAPA_Date__c</fullName>
        <description>Latest WCA CAPA Date</description>
        <inlineHelpText>Latest WCA CAPA Date</inlineHelpText>
        <label>Latest WCA CAPA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_WCA_CAPA_Due_Date__c</fullName>
        <description>Latest WCA CAPA Due Date</description>
        <inlineHelpText>Latest WCA CAPA Due Date</inlineHelpText>
        <label>Latest WCA CAPA Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Main_Product_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Main Product Group</description>
        <inlineHelpText>Main Product Group</inlineHelpText>
        <label>Main Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Multi_Factory_Building__c</fullName>
        <description>Multi Factory Building</description>
        <inlineHelpText>Multi Factory Building</inlineHelpText>
        <label>Multi Factory Building</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_Purpose_Building__c</fullName>
        <description>Multi Purpose Building</description>
        <inlineHelpText>Multi Purpose Building</inlineHelpText>
        <label>Multi Purpose Building</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Findings__c</fullName>
        <description>Check if number of audits with findings = 0</description>
        <formula>IF( No_of_Audits_with_Findings__c =0,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check if number of audits with findings = 0</inlineHelpText>
        <label>No Findings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_A_Findings__c</fullName>
        <description>Number of A Findings</description>
        <inlineHelpText>Number of A Findings</inlineHelpText>
        <label>No of A Findings</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Audits__c</fullName>
        <description>Number of Audits</description>
        <inlineHelpText>Number of Audits</inlineHelpText>
        <label>No of Audits</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Audits_with_Findings__c</fullName>
        <description>Number of audits with findings</description>
        <inlineHelpText>Number of audits with findings</inlineHelpText>
        <label>No of Audits with Findings</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_B1_Findings__c</fullName>
        <description>Number of B1 findings</description>
        <inlineHelpText>Number of B1 findings</inlineHelpText>
        <label>No of B1 Findings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_B2_6_Findings__c</fullName>
        <description>Number of B2 &lt; 6 Findings</description>
        <inlineHelpText>Number of B2 &lt; 6 Findings</inlineHelpText>
        <label>No of B2&lt;6 Findings</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_B2_Findings__c</fullName>
        <description>Number of B2 Findings</description>
        <inlineHelpText>Number of B2 Findings</inlineHelpText>
        <label>No of B2 Findings</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_B2_T_Findings__c</fullName>
        <description>Number of B2 + T Findings</description>
        <inlineHelpText>Number of B2 + T Findings</inlineHelpText>
        <label>No of B2+T Findings</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_buildings_belong_to_facility__c</fullName>
        <description>Number of buildings belong to facility</description>
        <inlineHelpText>Number of buildings belong to facility</inlineHelpText>
        <label>No of buildings belong to facility</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_floors_in_each_building__c</fullName>
        <description>Number of floors in each building</description>
        <inlineHelpText>Number of floors in each building</inlineHelpText>
        <label>No of floors in each building</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_workers__c</fullName>
        <description>Number of workers</description>
        <inlineHelpText>Number of workers</inlineHelpText>
        <label>No of workers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Site_Investigation_Not_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On site investigation not completed</description>
        <inlineHelpText>Audit Group  = ON SITE INVESTIGATION and
facility status = DELISTED or ACTIVE  and
audit date = BLANK</inlineHelpText>
        <label>On Site Investigation Not Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Audits__c</fullName>
        <description>Other Audits</description>
        <inlineHelpText>Other Audits</inlineHelpText>
        <label>Other Audits</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Engineering_Audit_Requested__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Risk__c</fullName>
        <description>Overall Risk</description>
        <inlineHelpText>Overall Risk</inlineHelpText>
        <label>Overall Risk</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSTL_Code__c</fullName>
        <description>Postal Code</description>
        <inlineHelpText>Postal Code</inlineHelpText>
        <label>PSTL Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Audit_Deadline_FS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Past Audit Deadline (FS)</description>
        <inlineHelpText>Audit Group = PERIODIC FS and
Factory Status  = ACTIVE and
Audit Date = NOT BLANK and
Audit Date &lt; TODAY()-365*3 and
FS Audit Required = NOT BLANK</inlineHelpText>
        <label>Past Audit Deadline (FS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Audit_Deadline_WCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Past Audit Deadline (WCA)</description>
        <inlineHelpText>Audit Group = ANNUAL WCA and
Factory Status  = ACTIVE and
Audit Date &lt; TODAY()-365 and
Audit date = NOT BLANK</inlineHelpText>
        <label>Past Audit Deadline (WCA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_CAPA_Deadline_FS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Past CAPA Deadline (FS)</description>
        <inlineHelpText>Past CAPA Deadline (FS)
Audit Group  = FS FOLLOW UP and
Factory Status = ACTIVE and
Audit Date = BLANK and
CAPA Due Date  &lt; TODAY() (DUE DATE a result of selecting 1/3/6 months) and
FS Audit Required  = NOT BLANK</inlineHelpText>
        <label>Past CAPA Deadline (FS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_CAPA_Deadline_WCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Past CAPA Deadline (WCA)</description>
        <inlineHelpText>Past CAPA Deadline (WCA)
Audit Group  = WCA FOLLOW UP and
Factory Status = ACTIVE and
Audit Date = BLANK and
CAPA Due Date  &lt; TODAY() (DUE DATE a result of selecting 1/3/6 months) and</inlineHelpText>
        <label>Past CAPA Deadline (WCA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_CAPA_FS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pending CAPA (FS)</description>
        <inlineHelpText>Audit Group = FS FOLLOW UP and
FACTORY STATUS = ACTIVE and
Audit Date = BLANK and
CAPA Due Date &gt;= TODAY() and
FS Audi Required = NOT BLANK</inlineHelpText>
        <label>Pending CAPA (FS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_CAPA_WCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pending CAPA (WCA)</description>
        <inlineHelpText>Audit Group = WCA FOLLOW UP and
Factory Status  = ACTIVE and
Audit Date = BLANK and
CAPA Due Date &gt;= TODAY()</inlineHelpText>
        <label>Pending CAPA (WCA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prev_Facility_Name__c</fullName>
        <description>Previous Facility Name</description>
        <inlineHelpText>Previous Facility Name</inlineHelpText>
        <label>Prev Facility Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionName__c</fullName>
        <formula>Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RegionName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Region</description>
        <inlineHelpText>Region</inlineHelpText>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remove_from_Green_List_Due_to_WCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Remove from Green List (Due to WCA)</description>
        <inlineHelpText>Remove from Green List (Due to WCA)</inlineHelpText>
        <label>Remove from Green List (Due to WCA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Removed_from_Green_List_Due_to_FS_CAPA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Removed from Green List (Due to FS CAPA)</description>
        <inlineHelpText>Removed from Green List (Due to FS CAPA)</inlineHelpText>
        <label>Removed from Green List (Due to FS CAPA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Removed_from_Green_List_Due_to_FS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Removed from Green List (Due to FS)</description>
        <inlineHelpText>Removed from Green List (Due to FS)</inlineHelpText>
        <label>Removed from Green List (Due to FS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Removed_from_Greenlist_Due_to_WCA_CAPA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Removed from Greenlist (Due to WCA CAPA)</description>
        <inlineHelpText>Removed from Greenlist (Due to WCA CAPA)</inlineHelpText>
        <label>Removed from Greenlist (Due to WCA CAPA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Structural_Audit__c</fullName>
        <description>Structural Audit</description>
        <inlineHelpText>Structural Audit</inlineHelpText>
        <label>Structural Audit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Engineering_Audit_Requested__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Training Completed</description>
        <inlineHelpText>Training Completed</inlineHelpText>
        <label>Training Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Not_Completed__c</fullName>
        <description>Training Not Completed</description>
        <formula>AND(OR(ISPICKVAL(Facility_Status__c, &quot;Active&quot;)),
 ISPICKVAL( FS_Training_request__c , &quot;Yes&quot;),
 ISBLANK(FS_Training_date__c )
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Facility Status = Active and
FS Training Request = Yes and
FS Training Date = Blank</inlineHelpText>
        <label>Training Not Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_not_requested__c</fullName>
        <description>Training not requested</description>
        <formula>AND(OR(ISPICKVAL(Facility_Status__c, &quot;Active&quot;),ISPICKVAL(Facility_Status__c, &quot;Manual Accept Shipments&quot;)),
OR(
 ISPICKVAL( FS_Training_request__c , &quot;No&quot;),
 ISBLANK(TEXT(FS_Training_request__c)))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Facility Status = Active or Manual Accept Shipments and
FS Training Request = No or Blank</inlineHelpText>
        <label>Training not requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unauthorized_Sub_Contracting__c</fullName>
        <description>Unauthorized Subcontracting</description>
        <inlineHelpText>Unauthorized Subcontracting</inlineHelpText>
        <label>Unauthorized Subcontracting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WCA_CAPA_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WCA CAPA Completed</description>
        <inlineHelpText>WCA CAPA Completed</inlineHelpText>
        <label>WCA CAPA Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WCA_CAPA_Greenlist_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WCA CAPA Greenlist Criteria</description>
        <inlineHelpText>WCA CAPA Greenlist Criteria</inlineHelpText>
        <label>WCA CAPA Greenlist Criteria</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>